fixed ticker image and text wrapping and api url to load weather query onload

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@ body {
 
 }
 
-
+a {
+  color: white;
+}
 .footer {
   margin-top: auto;
   padding-bottom: 0.5em;
